# TripleT

./: .gitignore  Cargo.toml  README.md  tsconfig.json
app/: main.rs
nuxt-app/: app.vue  main.js  main.ts
nuxt-app/components/: Main.vue
src/: lib.rs
src/agent/: minimax_player.rs  mod.rs  random_player.rs
src/game/: mod.rs  moves.rs
