[package]
name = "TripleT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]


# tictactoe game library
[lib]
name = "ttt"
version = "0.1.0"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "app/main.rs"


[dependencies]
rand = "0.8.4"
